--- a/index.html
+++ b/index.html
@@ -47,36 +47,38 @@
 
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="willkommen-auf-der-developmentseite-von-den-plugin-funcommands" class="anchor" href="#willkommen-auf-der-developmentseite-von-den-plugin-funcommands" aria-hidden="true"><span class="octicon octicon-link"></span></a>Willkommen auf der Developmentseite von den Plugin FunCommands</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Willkommen hier findest du alle updates des Minecraft Plugins FunCommands. Updates und alle anderen Information Findest du hier auf der Seite.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>Download Links
+Bis jetzt sind noch Keine Downloads.
+
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h3>
+<a id="was-ist-in-diesen-plugin-enthalten" class="anchor" href="#was-ist-in-diesen-plugin-enthalten" aria-hidden="true"><span class="octicon octicon-link"></span></a>Was ist in diesen Plugin enthalten</h3>
+
+<p>In diesen plugin sind viele Commands wie man am Namen schon erlesen kann.Es sind viel Fun Commands, Dumme Commands,
+Nutzlose Commands, und auch noch ein paar Nützliche und nartürlich nicht zu vergessen die Troll Commands.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="wann-wird-es-releasd" class="anchor" href="#wann-wird-es-releasd" aria-hidden="true"><span class="octicon octicon-link"></span></a>Wann wird es Releasd?</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Sagen wir so Leute es wird Releasd wenn es Fertig wird wir (Bzw Ich) möchte erstmal ein paar Kommands drin haben.Und da ich erst mit den Plugin schreiben Angefangen habe wird das ein bischen länger dauer.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="author-helfer-und-infos" class="anchor" href="#author-helfer-und-infos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Author, Helfer und Infos</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Idee/Projektleitung: Fluttershy552
+Helfer und Unterstützer beim Plugin schreiben: Flo ;)
+Programme die genutzt werden: eclipse und Minecraft</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="kontakt" class="anchor" href="#kontakt" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kontakt</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>E-Mail: <a href="mailto:jancraft07@gmail.com">jancraft07@gmail.com</a>
+Steam: [Brony]Fluttershy552</p>
       </section>
 
       <footer>
