Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,58 +1,43 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+    <meta name="description" content="FunCommands : ">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>FunCommands by Fluttershy552</title>
+    <title>FunCommands</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/Fluttershy552/FunCommands">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>FunCommands</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Fluttershy552/FunCommands">View on GitHub</a>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/Fluttershy552/FunCommands/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/Fluttershy552/FunCommands/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+          <h1 id="project_title">FunCommands</h1>
+          <h2 id="project_tagline"></h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/Fluttershy552/FunCommands/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Fluttershy552/FunCommands/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h3>
-<a id="willkommen-auf-der-developmentseite-von-den-plugin-funcommands" class="anchor" href="#willkommen-auf-der-developmentseite-von-den-plugin-funcommands" aria-hidden="true"><span class="octicon octicon-link"></span></a>Willkommen auf der Developmentseite von den Plugin FunCommands</h3>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h2>
+<a id="willkommen-auf-der-developmentseite-von-den-plugin-funcommands" class="anchor" href="#willkommen-auf-der-developmentseite-von-den-plugin-funcommands" aria-hidden="true"><span class="octicon octicon-link"></span></a>Willkommen auf der Developmentseite von den Plugin FunCommands</h2>
 
 <p>Willkommen hier findest du alle updates des Minecraft Plugins FunCommands. Updates und alle anderen Information Findest du hier auf der Seite.</p>
 
 <h3>
-<a id="was-ist-in-diesen-plugin-enthalten" class="anchor" href="#was-ist-in-diesen-plugin-enthalten" aria-hidden="true"><span class="octicon octicon-link"></span></a>Was ist in diesen Plugin enthalten</h3>
+<a id="was-ist-in-diesen-plugin-enthalten" class="anchor" href="#was-ist-in-diesen-plugin-enthalten" aria-hidden="true"><span class="octicon octicon-link"></span></a>Was ist in diesen Plugin enthalten?</h3>
 
 <p>In diesen plugin sind viele Commands wie man am Namen schon erlesen kann.Es sind viel Fun Commands, Dumme Commands,
 Nutzlose Commands, und auch noch ein paar Nützliche und nartürlich nicht zu vergessen die Troll Commands.</p>
@@ -75,21 +60,17 @@ Programme die genutzt werden: eclipse und Minecraft</p>
 <p>E-Mail: <a href="mailto:jancraft07@gmail.com">jancraft07@gmail.com</a>
 Steam: [Brony]Fluttershy552</p>
       </section>
+    </div>
 
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/Fluttershy552">Fluttershy552</a> can be found on <a href="https://github.com/Fluttershy552/FunCommands">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">FunCommands maintained by <a href="https://github.com/Fluttershy552">Fluttershy552</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-
     </div>
 
     
+
   </body>
 </html>
